fix: issue with image upload name text overflowing

--- a/src/components/ImageUpload/imageUpload.css
+++ b/src/components/ImageUpload/imageUpload.css
@@ -26,15 +26,15 @@
   cursor: pointer;
 }
 .image-footer .image-name {
-  white-space: nowrap;
   cursor: pointer;
+  inline-size: 290px;
+  overflow: hidden;
 }
 .image-footer .image-thumbnail {
   display: block;
   height: 48px;
   min-height: 48px;
   overflow: hidden;
-  /* width: 48px; */
 }
 
 .image-footer .edit-image {
